Prevent body scrolling when menu is open on mobile

--- a/src/components/Application.scss
+++ b/src/components/Application.scss
@@ -1,8 +1,8 @@
 @import '../styles/reset.scss';
 
 
-body {
-  // background: #D0F2F7;
+body.scroll-lock {
+  overflow: hidden;
 }
 
 .main-content {
